config-root/namespaces/jx-production/nodey553/nodey553-nodey553-deploy.yaml
# Source: nodey553/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodey553-nodey553
  labels:
    draft: draft-app
    chart: "nodey553-2.1.1"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  namespace: jx-production
  annotations:
    wave.pusher.com/update-on-config-change: 'true'
spec:
  selector:
    matchLabels:
      app: nodey553-nodey553
  replicas: 1
  template:
    metadata:
      labels:
        draft: draft-app
        app: nodey553-nodey553
    spec:
      serviceAccountName: nodey553-nodey553
      containers:
        - name: nodey553
          image: "gcr.io/jenkins-x-labs-bdd/nodey553:2.1.1"
          imagePullPolicy: IfNotPresent
          envFrom: null
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 400m
              memory: 256Mi
            requests:
              cpu: 200m
              memory: 128Mi
      terminationGracePeriodSeconds:
      imagePullSecrets:
